# C_Computer_vision_lib

./: .gitignore  .~lock.Assignment_2_sleepySquirle.odt#  .~lock.assign3.odt#  Assignment_2_sleepySquirle.odt  CMakeLists.txt  README.md  assign3.odt  binaryThreshholds.txt  component_analysis.c  component_analysis.h  component_helper.c  component_labeling.c  edgeDetector.c  filters.c  funtimes  helperFun.c  helperFun.h  image analysis param.txt  image_analysis.c  inner_kmean.cl  kmean.c  kmeanAccelerated.cu  main.c  mean_shift.c  output.pgm  output1.pgm  planekmeans.ppm  utility.c
assignments/: assignment1.c  assignment2.c  assignment3.c  assignment4.c
output/: inverted.pgm  outputOriginal.pgm
output/assign1/comp1/: img.pgm  spec.txt
output/assign1/comp102/: spec.txt
output/assign1/comp11/: img.pgm
output/assign1/comp2/: spec.txt
output/assign1/comp3/: img.pgm
output/assign1/comp4/: img.pgm
output/assign1/comp5/: img.pgm
output/assign1/comp6/: img.pgm
output/assign1/comp7/: img.pgm
output/assign1/comp8/: spec.txt
output/assign1/comp9/: img.pgm  spec.txt
output/comp10/: img.pgm
output/comp2/: img.pgm
output/comp3/: spec.txt
output/comp4/: spec.txt
output/comp5/: spec.txt
output/comp7/: spec.txt
output/comp8/: img.pgm
